--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,25 +21,26 @@ body{
 #top{
     margin: 0;
     overflow:hidden;
+    max-height: 17%;
 }
 
 #middle{
     background-color: #F1EFE7;
-    margin-left: 50px;
-    margin-right: 50px;
-    padding: 20px;
-    overflow:hidden;
+    margin-left: 4%;
+    margin-right: 4%;
+    padding: 1%;
+    overflow:auto;
+    height:52%
 }
 
 
 #bottom{
     display: flex;
-    margin-left: 30px;
-    margin-right: 50px;
-    padding-top: 30px;
-    padding-left: 230px;
-    padding-right: 100px;
+    padding-top: 2%;
     overflow:hidden;
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
 }
 
 #homelogo{
@@ -47,6 +48,11 @@ body{
     margin-left: 50px;
     margin-bottom: 30px; 
     
+}
+#logo{
+    width: 230px;
+    max-width: 100%;
+    height: auto;
 }
 
 #button1{
@@ -75,17 +81,21 @@ body{
 
 #cake{
     width:180px;
+    max-width: 100%;
+    height: auto;
     float:left;
     margin-left: 50px;
 }
 #sky{
     width: 180px;
+    max-width: 100%;
+    height: auto;
     margin-top: 70px ;
     padding-left: 20px;
 }
 #maintext{
     float:right;
-    margin-right: 220px;
+    margin-right: 15%;
 }
 #mainbig{
     font-size:65px;
@@ -103,10 +113,23 @@ body{
     padding:0;
     background:none;
     border: none;
-    margin-left:20px;
+    margin-right:15%;
     width: 150px;
     height:120px;
 }
+
+#navigate2{
+    padding:0;
+    background:none;
+    border: none;
+    width: 150px;
+    height:120px;
+}
+
+#navigate:hover,#navigate2:hover{
+    background-color: #f7f7f7;
+}
+
 
 #plan{
     width: 50px;
