--- a/views/todo_add.hbs
+++ b/views/todo_add.hbs
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-    <title>To-Do</title>
+    <title>Add Task</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/todo.css">
+    <link rel="stylesheet" href="css/addGuest.css">
 </head>
 
 <body style="margin:0">
@@ -21,35 +21,35 @@
         </div>
     </div>
 
-
-    <div id="head">
-        <p id="header">TO-DO</p>
-    </div>
-    <div id="navigate">
-        <button type="button" id="event">🡨 Sample Event</button>
-    </div>
     <div id="middle">
-        {{#each todosArray as |todoGroup|}}
-        <p class="left-align" style="font-family: 'Quicksand', sans-serif; font-weight: bold;">{{todoGroup.date}}</p>
-        {{#each todoGroup.todos as |todo|}}
-        <div class="tasks">
-            <input type="checkbox" id="{{todo._id}}" class="todos" {{todo.status}}>
-            <label for="{{todo._id}}">{{todo.name}}</label>
-            <img src="css/trash_icon.png" alt="Trash Icon" class="deleteTask" id="{{todo._id}}">
+        <div id="head">
+            <p id="header">ADD TASK</p>
         </div>
-        {{/each}}
-        {{/each}}
+        <div id="navigate">
+            <a href="todo.html"><button type="button" id="back">🡨 Back</button></a>
+
+        </div>
+        <form id="todo-add-form" method="post" action="/todoSubmit">
+            <div class="form-group">
+                <label for="taskname" id="tasknamelabel">Task Name:</label>
+                <input type="text" id="taskname" name="taskname" placeholder="Task Name" required>
+            </div>
+            <div class="form-group">
+                <label for="taskdate" id="taskdatelabel">Date:</label>
+                <input type="date" id="taskdate" name="taskdate" required>
+            </div>
+            <div class="form-group">
+                <label for="tasktatus" id="taskstatuslabel">Status:</label>
+                <select id="taskstatus" name="taskstatus">
+                    <option value="unchecked">In-Progress</option>
+                    <option value="checked">Completed</option>
+                </select>
+            </div>
+            <input type="submit" id="confirmbutton" value="Confirm">
+        </form>
+
     </div>
-
-
-
-
-
-    <div id="containeradd">
-        <a href="/addtodo"><button type="button" id="add-task-button" class="add-task-button">Add
-                Task</button></a>
     </div>
-
     <div id="footer">
         <div id="container">
             <a href="collaborators.html">
@@ -84,8 +84,6 @@
             </a>
         </div>
     </div>
-
-    <script src="todo_script.js"></script>
 </body>
 
 </html>
