--- a/public/css/events.css
+++ b/public/css/events.css
@@ -1,52 +1,169 @@
 @font-face {
     font-family: 'League Spartan Bold';
     src: url(LeagueSpartan-Bold.ttf);
-  }
+}
+
 @font-face {
     font-family: 'League Spartan Regular';
     src: url(LeagueSpartan-Regular.ttf);
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: 'Quicksand';
     src: url(Quicksand-Regular.ttf);
-  }
+}
 
-a{
-    text-decoration: none;
-} 
-body{
-    overflow-y: hidden;
+/* General Body Styles */
+body {
+    font-family: 'Quicksand', sans-serif;
     overflow-x: hidden;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-#top{
     margin: 0;
-    overflow:hidden;
+}
+
+/* Top Navigation */
+#top {
     background-color: #F1EFE7;
-    max-height: 17%;
+    padding: 10px 0;
 }
 
-#middle{
-    height: 100%;
-    overflow-y: auto;
+#homelogo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 50px;
 }
 
-#homelogo{
-    margin-top: 30px;
-    margin-left: 50px;
-    margin-bottom: 30px; 
-    
-}
-#logo{
+#logo {
     width: 200px;
     max-width: 100%;
     height: auto;
+}
+
+#button1, #button2 {
+    margin: 0;
+}
+
+#button1 button, #button2 button {
+    background: none;
+    font-size: 30px;
+    border: none;
+    font-family: 'Quicksand';
+    cursor: pointer;
+    color: black;
+}
+
+#button1 button:hover, #button2 button:hover {
+    text-decoration: underline;
+}
+
+/* Middle Section */
+#middle {
+    background-color: #fff;
+    max-width: 1200px;
+    margin: 20px auto;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+#head {
+    border-bottom: 2px solid rgb(206, 206, 206);
+    margin: 0 auto 20px;
+    width: 96%;
+}
+
+#header {
+    text-align: center;
+    font-size: 35px;
+    font-family: 'League Spartan Bold';
+    margin: 10px 0 0;
+}
+
+#navigate {
+    overflow: hidden;
+    padding: 5px 30px;
+    margin-top: 10px;
+}
+
+#search {
+    font-size: 20px;
+    border-radius: 10px;
+    border: 2px solid black;
+    float: left;
+    padding: 5px;
+}
+
+#filterbutton, #sortbutton {
+    background-color: #F1EFE7;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-family: 'Quicksand';
+    padding: 10px 20px;
+    cursor: pointer;
+    float: right;
+    margin-left: 10px;
+}
+
+#filterbutton:hover, #sortbutton:hover {
+    background-color: #ddd;
+}
+
+/* Event Entries */
+#entries {
+    max-height: 350px;
+    overflow-y: auto;
+}
+
+.entry {
+    background-color: #F1EFE7;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    padding: 10px 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.entry h3 {
+    font-size: 25px;
+    margin: 0;
+    font-family: 'Quicksand';
+    color: black;
+}
+
+.entry p {
+    margin: 5px 0;
+    font-size: 15px;
+    font-family: 'Quicksand';
+    color: #777;
+}
+
+.entry hr {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    border: none;
+    border-top: 1px solid #ddd;
+}
+
+#editbutton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+#editicon, #trashicon {
+    width: 25px;
+    margin-left: 10px;
+}
+
+/* Container Add Buttons */
+#containeradd {
+    text-align: center;
+    margin-top: 20px;
 }
 #button1{
     float: right;
@@ -62,136 +179,17 @@ body{
     margin-bottom: auto;
     margin-right: 70px;
 }
-
-#b1{
-    padding: 0%;
-    background: none;
-    font-size: 30px;
-    border: none;
-    font-family: 'Quicksand';
-}
-#b1:hover{
-    text-decoration: underline;
-}
-
-#head{
-    border-bottom: 2px solid rgb(206, 206, 206);
-    margin: auto;
-    width: 96%;
-}
-#header{
-    text-align: center;
-    font-size: 35px;
-    font-family: 'League Spartan Bold';
-    margin-bottom: 0;
-    margin-top: 10px;
-}
-
-#navigate{
-    overflow: hidden;
-    padding: 5px 30px 5px 30px;
-    margin-top: 10px;
-}
-
-#search{
-    font-size: 20px;
-    font-family: 'Quicksand';
-    border-radius: 10px;
-    border: 2px solid black;
-    float: left;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-#filterbutton{
-    margin-left: 10px;
-    font-size: 20px;
-    font-family: 'Quicksand';
-    border: none;
-    border-radius: 10px;
+#addbutton, #joinbutton {
+    background-color: #F1EFE7;
     color: black;
-    background-color: #F1EFE7;
-    font-size: 20px;
-    font-family: 'Quicksand';
-    padding: 10px;
-    width:10%;
-    float:right;
-}
-
-#sortbutton{
-    margin-left: 10px;
-    font-size: 20px;
-    font-family: 'Quicksand';
     border: none;
     border-radius: 10px;
-    color: black;
-    background-color: #F1EFE7;
-    font-size: 20px;
-    font-family: 'Quicksand';
-    padding: 10px;
-    width:10%;
-    float:right;
-}
-
-
-
-#entries{
-    overflow-y: auto;
-    height: 350px;
-}
-#entry{
-    background-color: #F1EFE7;
-    border-radius: 10px;
-    width:94%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 15px;
-    padding: 10px 20px 10px 20px;
-    overflow: hidden;
-    position: relative;
-}
-#name{
-    font-size: 25px;
-    margin:0;
-    font-family: 'Quicksand';
-}
-#role,#date,#location{
-    font-size: 15px;
-    margin:0;
-    color: #BEB1B1;
-    font-family: 'Quicksand';
-}
-#editbutton{
-    margin-top:0;
-    padding-top: 12px;
-    background: none;
-    border: none;
-    position:absolute;
-    right:10px;
-}    
-#editicon,#trashicon{
-    width:25px;
-    margin-left: 10px;
-}
-
-
-#containeradd{
-    height: 7vh;
-    margin: 0;
-    text-align: center;
-}
-#addbutton,#joinbutton{
-    border: none;
-    border-radius: 10px;
-    color: black;
-    background-color: #F1EFE7;
     font-size: 20px;
     font-family: 'Quicksand', sans-serif;
-    padding: 5px 15px 5px 15px;
-    margin: 10px 30px 10px 20px;
-    float: right;
-    display: inline-flex; 
-    justify-content: center;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    display: inline-flex;
     align-items: center;
 }
 
@@ -199,22 +197,34 @@ body{
     width: 30px;
     height: 30px;
     object-fit: cover;
-    margin-right: 10px; 
-}
-.btnlabel{
-    font-family: 'Quicksand';
-    text-align: center;
-    font-size: 15px;
-    align-items: center;
-    margin:0;
+    margin-right: 10px;
 }
 
-#eventname {
-    background: none;
-    font-size: 20px;
-    border: none;
+.btnlabel {
+    font-size: 15px;
     font-family: 'Quicksand';
+    margin: 0;
 }
-#eventname:hover {
-    text-decoration: underline;
+
+#addbutton:hover, #joinbutton:hover {
+    background-color: #ddd;
+}
+
+/* Responsive Adjustments */
+@media (max-width: 768px) {
+    #homelogo {
+        margin: 20px;
+    }
+    #button1 {
+        margin-right: 20px;
+    }
+    #button2 {
+        margin-right: 20px;
+    }
+    #middle {
+        padding: 10px;
+    }
+    #entries {
+        max-height: 250px;
+    }
 }
