--- a/public/css/budget.css
+++ b/public/css/budget.css
@@ -1,76 +1,76 @@
 @font-face {
-    font-family: 'League Spartan Bold';
-    src: url(LeagueSpartan-Bold.ttf);
+  font-family: "League Spartan Bold";
+  src: url(LeagueSpartan-Bold.ttf);
 }
 @font-face {
-    font-family: 'League Spartan Regular';
-    src: url(LeagueSpartan-Regular.ttf);
+  font-family: "League Spartan Regular";
+  src: url(LeagueSpartan-Regular.ttf);
 }
 @font-face {
-    font-family: 'Quicksand';
-    src: url(Quicksand-Regular.ttf);
+  font-family: "Quicksand";
+  src: url(Quicksand-Regular.ttf);
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 body {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 #top {
-    margin: 0;
-    overflow: hidden;
-    background-color: #F1EFE7;
-    max-height: 17%;
+  margin: 0;
+  overflow: hidden;
+  background-color: #f1efe7;
+  max-height: 17%;
 }
 
 #middle {
-    height: 35%;
-    overflow-y: auto;
-    padding-bottom: 120px; 
+  height: 35%;
+  overflow-y: auto;
+  padding-bottom: 120px;
 }
 
 #homelogo {
-    margin-top: 30px;
-    margin-left: 50px;
-    margin-bottom: 30px;
+  margin-top: 30px;
+  margin-left: 50px;
+  margin-bottom: 30px;
 }
 #logo {
-    width: 200px;
-    max-width: 100%;
-    height: auto;
+  width: 200px;
+  max-width: 100%;
+  height: auto;
 }
 
 #button1 {
-    float: right;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 50px;
-    margin-left: 30px;
+  float: right;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 50px;
+  margin-left: 30px;
 }
 
 #button2 {
-    float: right;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 70px;
+  float: right;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 70px;
 }
 
 #b1 {
-    padding: 0%;
-    background: none;
-    font-size: 30px;
-    border: none;
-    font-family: 'Quicksand';
+  padding: 0%;
+  background: none;
+  font-size: 30px;
+  border: none;
+  font-family: "Quicksand";
 }
 #b1:hover {
-    text-decoration: underline;
-  }
+  text-decoration: underline;
+}
 
 .footerbutton2 {
   border: none;
@@ -81,216 +81,217 @@ body {
 }
 
 #head {
-    border-bottom: 2px solid rgb(206, 206, 206);
-    margin: auto;
-    width: 96%;
+  border-bottom: 2px solid rgb(206, 206, 206);
+  margin: auto;
+  width: 96%;
 }
 #header {
-    text-align: center;
-    font-size: 35px;
-    font-family: 'League Spartan Bold';
-    margin-bottom: 0;
-    margin-top: 10px;
+  text-align: center;
+  font-size: 35px;
+  font-family: "League Spartan Bold";
+  margin-bottom: 0;
+  margin-top: 10px;
 }
 
 #navigate {
-    overflow: hidden;
-    padding: 5px 30px 5px 30px;
+  overflow: hidden;
+  padding: 5px 30px 5px 30px;
 }
 
 #budget-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left:275px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 275px;
 }
 
 #budget_amount {
-    font-family: 'Quicksand';
-    font-size: 25px;
-
-   
+  font-family: "Quicksand";
+  font-size: 25px;
 }
 
 #editbudgetbutton {
-
-    margin-left: 10px;
-    font-size: 15px;
-    font-family: 'Quicksand';
-    border: none;
-    border-radius: 10px;
-    color: black;
-    background-color: #F1EFE7;
-    font-size: 20px;
-    padding: 5px;
-    width: 10%;
+  margin-left: 10px;
+  font-size: 15px;
+  font-family: "Quicksand";
+  border: none;
+  border-radius: 10px;
+  color: black;
+  background-color: #f1efe7;
+  font-size: 20px;
+  padding: 5px;
+  width: 10%;
 }
 
 #event {
-    background: none;
-    font-size: 20px;
-    border: none;
-    font-family: 'Quicksand';
+  background: none;
+  font-size: 20px;
+  border: none;
+  font-family: "Quicksand";
 }
 #event:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 #search {
-    font-size: 20px;
-    font-family: 'Quicksand';
-    border-radius: 10px;
-    border: 2px solid black;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-left: 320px;
+  font-size: 20px;
+  font-family: "Quicksand";
+  border-radius: 10px;
+  border: 2px solid black;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 320px;
 }
 #filterbutton {
-    margin-left: 10px;
-    font-size: 20px;
-    font-family: 'Quicksand';
-    border: none;
-    border-radius: 10px;
-    color: black;
-    background-color: #F1EFE7;
-    padding: 10px;
-    width: 10%;
-    float: right;
+  margin-left: 10px;
+  font-size: 20px;
+  font-family: "Quicksand";
+  border: none;
+  border-radius: 10px;
+  color: black;
+  background-color: #f1efe7;
+  padding: 10px;
+  width: 10%;
+  float: right;
 }
 
 #sortbutton {
-    margin-left: 10px;
-    font-size: 20px;
-    font-family: 'Quicksand';
-    border: none;
-    border-radius: 10px;
-    color: black;
-    background-color: #F1EFE7;
-    padding: 10px;
-    width: 10%;
-    float: right;
+  margin-left: 10px;
+  font-size: 20px;
+  font-family: "Quicksand";
+  border: none;
+  border-radius: 10px;
+  color: black;
+  background-color: #f1efe7;
+  padding: 10px;
+  width: 10%;
+  float: right;
 }
 
 #entries {
-    overflow-y: auto;
-    height: 100%;
+  overflow-y: auto;
+  height: 100%;
 }
 
-#entry {
-    background-color: #F1EFE7;
-    border-radius: 10px;
-    width: 94%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 15px;
-    padding: 10px 20px 10px 20px;
-    overflow: hidden;
-    position: relative;
+.entry {
+  background-color: #f1efe7;
+  border-radius: 10px;
+  width: 94%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  padding: 10px 20px 10px 20px;
+  overflow: hidden;
+  position: relative;
 }
 
 #budgetname {
-    font-size: 25px;
-    margin: 0;
-    font-family: 'Quicksand';
+  font-size: 25px;
+  margin: 0;
+  font-family: "Quicksand";
 }
 
 #budgetcategory {
-    font-size: 15px;
-    margin: 0;
-    color: #BEB1B1;
-    font-family: 'Quicksand';
+  font-size: 15px;
+  margin: 0;
+  color: #beb1b1;
+  font-family: "Quicksand";
 }
 
 #editbutton {
-    margin-top: 0;
-    padding-top: 12px;
-    background: none;
-    border: none;
-    position: absolute;
-    right: 10px;
+  margin-top: 0;
+  padding-top: 12px;
+  background: none;
+  border: none;
+  position: absolute;
+  right: 10px;
 }
-#editicon, #trashicon {
-    width: 25px;
+#editicon,
+.trashicon {
+  width: 25px;
+  cursor: pointer;
 }
 
 #containeradd {
-    position: fixed;
-    bottom: 12%;
-    width: 100%;
-    background-color: white;
-    padding: 10px 0;
-    box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
-    display: flex;
-    justify-content: space-between;
+  position: fixed;
+  bottom: 12%;
+  width: 100%;
+  background-color: white;
+  padding: 10px 0;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 #addbutton {
-    border: none;
-    border-radius: 10px;
-    color: black;
-    background-color: #F1EFE7;
-    font-size: 20px;
-    font-family: 'Quicksand', sans-serif;
-    padding: 5px 15px;
-    margin-left: 20px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+  border: none;
+  border-radius: 10px;
+  color: black;
+  background-color: #f1efe7;
+  font-size: 20px;
+  font-family: "Quicksand", sans-serif;
+  padding: 5px 15px;
+  margin-left: 20px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 #footer {
-    position: fixed;
-    bottom: 0;
-    background-color: #F3F2EF;
-    height: 12%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
+  position: fixed;
+  bottom: 0;
+  background-color: #f3f2ef;
+  height: 12%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .footerbutton {
-    border: none;
-    background: none;
-    padding: 15px 20px;
-    width: 11%;
-    margin-right: 10%;
-    margin-left: 0;
-    flex-direction: column;
+  border: none;
+  background: none;
+  padding: 15px 20px;
+  width: 11%;
+  margin-right: 10%;
+  margin-left: 0;
+  flex-direction: column;
 }
-.footerbutton:hover, .footerbutton2:hover {
-    .btnlabel {
-        text-decoration: underline;
-    }
+.footerbutton:hover,
+.footerbutton2:hover {
+  .btnlabel {
+    text-decoration: underline;
+  }
 }
 .footerbutton2 {
-    border: none;
-    background: none;
-    padding: 15px 20px;
-    width: 11%;
-    margin-right: 0;
+  border: none;
+  background: none;
+  padding: 15px 20px;
+  width: 11%;
+  margin-right: 0;
 }
 
 .btnicon {
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-    margin-bottom: 0;
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  margin-bottom: 0;
 }
 .btnlabel {
-    font-family: 'Quicksand';
-    text-align: center;
-    font-size: 15px;
-    align-items: center;
+  font-family: "Quicksand";
+  text-align: center;
+  font-size: 15px;
+  align-items: center;
 }
 
 #container {
-    width: 70%;
-    margin: 0 auto;
+  width: 70%;
+  margin: 0 auto;
 }
 
-.totals .total-spent, .totals .amount-left {
-    text-align: right;
-    font-size: 17px;
-    font-family: 'Quicksand', sans-serif;
-    margin-right: 20px;
-    
+.totals .total-spent,
+.totals .amount-left {
+  text-align: right;
+  font-size: 17px;
+  font-family: "Quicksand", sans-serif;
+  margin-right: 20px;
 }
