some minor fixes of routing

--- a/views/budget.hbs
+++ b/views/budget.hbs
@@ -59,7 +59,7 @@
     </div>
 
     <div id="containeradd">
-        <a href="/budgetAdd">
+        <a href="/budgetAdd?id={{event._id}}">
             <button type="button" id="addbutton"><img src="css/plus_icon.png" class="btnicon">
                 Add Item</button></a>
         <div class="totals"><!--calculate amount according to budget items-->
