--- a/views/budget_add.hbs
+++ b/views/budget_add.hbs
@@ -49,6 +49,7 @@
                 <input type="text" id="itemcategory" name="itemcategory" placeholder="Category" required>
             </div>
 
+            <input type="hidden" id="event" name="event" value="{{id}}">
             <input type="submit" id="confirmbutton" value="Confirm">
         </form>
 
