--- a/views/budget_edit.hbs
+++ b/views/budget_edit.hbs
@@ -50,6 +50,7 @@
                     value="{{budget.category}}">
             </div>
             <input type="hidden" id="itemid" name="itemid" value="{{budget._id}}">
+            <input type="hidden" id="event" name="event" value="{{id}}">
 
             <input type="submit" id="confirmbutton" value="Confirm">
         </form>
