--- a/views/todo.hbs
+++ b/views/todo.hbs
@@ -46,7 +46,7 @@
 
 
     <div id="containeradd">
-        <a href="/addtodo"><button type="button" id="add-task-button" class="add-task-button">Add
+        <a href="/addtodo?id={{event}}"><button type="button" id="add-task-button" class="add-task-button">Add
                 Task</button></a>
     </div>
 
